Added Jwt token authentication
