# src/Contracts/Authentication/LoginRequest.cs
@@ -1,0 +1,5 @@
+namespace Argo.CA.Contracts.Authentication;
+
+public record LoginRequest(
+    string Email,
+    string Password);
