# src/Infrastructure/Security/JwtTokenGeneration/JwtTokenGenerator.cs
@@ -1,0 +1,41 @@
+using Argo.CA.Application.Common.Security.JwtTokenGeneration;
+using Microsoft.Extensions.Options;
+using Microsoft.IdentityModel.Tokens;
+using System.IdentityModel.Tokens.Jwt;
+using System.Security.Claims;
+using System.Text;
+
+namespace Argo.CA.Infrastructure.Security.JwtTokenGeneration;
+
+public class JwtTokenGenerator(IOptions<JwtSettings> jwtOptions) : IJwtTokenGenerator
+{
+    private readonly JwtSettings _jwtSettings = jwtOptions.Value;
+
+    public string GenerateToken(
+        string id,
+        string userName,
+        string email,
+        IList<string> roles)
+    {
+        var key = new SymmetricSecurityKey(Encoding.UTF8.GetBytes(_jwtSettings.Secret));
+        var credentials = new SigningCredentials(key, SecurityAlgorithms.HmacSha256);
+
+        var claims = new List<Claim>
+        {
+            new(JwtRegisteredClaimNames.Name, userName),
+            new(JwtRegisteredClaimNames.Email, email),
+            new("id", id),
+        };
+
+        roles.ToList().ForEach(role => claims.Add(new(ClaimTypes.Role, role)));
+
+        var token = new JwtSecurityToken(
+            _jwtSettings.Issuer,
+            _jwtSettings.Audience,
+            claims,
+            expires: DateTime.UtcNow.AddMinutes(_jwtSettings.TokenExpirationInMinutes),
+            signingCredentials: credentials);
+
+        return new JwtSecurityTokenHandler().WriteToken(token);
+    }
+}
